--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Vanadite Ruby</title>
 </head>
-<body>
+<body onload="get()">
 <script src="jquery.min.js"></script>
 <script>
 $(document).ready(function(){
@@ -46,42 +46,222 @@ $(document).ready(function(){
     $("iframe").show();
   });
 });
+$(document).ready(function(){
+  $("#hideset").click(function(){
+    $("#settings").hide();
+  });
+  $("#setbtn").click(function(){
+    $("#settings").show();
+  });
+});
+$(document).ready(function(){
+  $(".hidemenu").click(function(){
+    $(".menu").hide();
+  });
+  $("#startmenu").click(function(){
+    $(".menu").show();
+  });
+});
 </script>
 </head>
 <body>
+<div class="menu">
+	<button class="hidemenu">X</button>
+	<h1> Start Menu </h1>
+	<button onClick="window.location.reload(true)">Reload</button>
+</div>
+<div id="taskbar">
 <div class="info">
   <body onload="startTime()">
     <div id="txt">
   </div>
 </div>
-<div id="taskbar">
+<button id="startmenu"></button>
 <button id="calcbtn"></button>
 <button id="idebtn"></button>
 <button id="paintbtn"></button>
 <button id="browbtn"></button>
+<button id="setbtn"></button>
 </div>
 <div id="paint">
- <div id="header-1">Doggle <button id="hideart">X</button></div>
+ <div id="header-1"><img src="browser.png" width="15px" height="15px">Doggle <button id="hideart">X</button></div>
    <iframe src="art.html" width="496" height="460px"></iframe>
 </div>
 <div id="calculator">
- <div id="header-1">Calculator <button id="hide">X</button></div>
+ <div id="header-1"><img src="calc.png" width="15px" height="15px">Calculator <button id="hide">X</button></div>
    <iframe src="calc.html" width="496" height="460px"></iframe>
 </div>
 <div id="ide">
- <div id="header-1">Code Editor <button id="hideide">X</button></div>
+ <div id="header-1"><img src="ide.png" width="15px" height="15px">Code Editor <button id="hideide">X</button></div>
   <iframe src="ide.html" width="496" height="460px"></iframe>
 </div>
 <div id="browser">
- <div id="header-1">Browser <button id="hidebrow">X</button></div>
+ <div id="header-1"><img src="browser.png" width="15px" height="15px">Browser <button id="hidebrow">X</button></div>
   <iframe src="https://www.google.com/webhp?igu=1" width="900px" height="600px"></iframe>
+</div>
+<div id="settings">
+ <div id="header-1"><img src="settings.png" width="15px" height="15px">Settings <button id="hideset">X</button></div>
+    <div>
+      <h1>Theme</h1>
+        <input type="text" id="hex">
+        <input type="color" id="color">
+        <br>
+    </div>
+    <div>
+
+      <h1>Wallpapers</h1>
+        <button id="btn-1">Green swirl</button>
+        <button id="btn-2">Crystal</button>
+        <button id="btn-3">Acid</button>
+        <button id="btn-4">Ring</button>
+    </div>
+    <script>
+let btn1 = document.querySelector('#btn-1');
+let btn2 = document.querySelector('#btn-2');
+let btn3 = document.querySelector('#btn-3');
+let btn4 = document.querySelector('#btn-4');
+let btnmenu = document.querySelector('.menu');
+btn1.addEventListener('click', () =>{
+    document.body.style.backgroundImage = "url('bg.gif')";
+});
+btn2.addEventListener('click', () =>{
+    document.body.style.backgroundImage = "url('bg3.gif')";
+});
+btn3.addEventListener('click', () =>{
+    document.body.style.backgroundImage = "url('bg2.gif')";
+});
+btn4.addEventListener('click', () =>{
+    document.body.style.backgroundImage = "url('ring.gif')";
+});
+      let colorInput = document.querySelector('#color');
+let hexInput = document.querySelector('#hex');
+
+colorInput.addEventListener('input', () =>{
+    let color = colorInput.value;
+    hexInput.value = color;
+    // document.body.style.backgroundColor = color;
+
+    document.querySelector('#startmenu').style.background = color;
+    document.querySelector('#hide').style.background = color;
+    document.querySelector('#hideset').style.background = color;
+    document.querySelector('#hidebrow').style.background = color;
+    document.querySelector('#hideide').style.background = color;
+    document.querySelector('#hideart').style.background = color;
+});
+    </script>
+</body>
+</html>
 </div>
 </body>
 <style type="text/css">
+button {
+    font-family: 'Poppins', sans-serif; 
+    background-color: black;
+    color: white; 
+    transition: all 2s;
+    border: none;
+}
+#btn-1 {
+  font-family: 'Poppins', sans-serif;
+  background: black;
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 0;
+}
+#btn-2 {
+  font-family: 'Poppins', sans-serif;
+  background: black;
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 0;
+}
+#btn-top {
+  font-family: 'Poppins', sans-serif;
+  background: black;
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 0;
+}
+#btn-bottom {
+  font-family: 'Poppins', sans-serif;
+  background: black;
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 0;
+}
+#btn-light {
+  font-family: 'Poppins', sans-serif;
+  background: black;
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 0;
+}
+#btn-dark {
+  font-family: 'Poppins', sans-serif;
+  background: black;
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 0;
+}
+#btn-3 {
+  font-family: 'Poppins', sans-serif;
+  background: black;
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 0;
+}
+#btn-4 {
+  font-family: 'Poppins', sans-serif;
+  background: black;
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 0;
+}
+#browbtn:hover {
+  color: black;
+  border-radius: 100vh;
+}
+button:hover {
+  background: white;
+  color: black;
+  border-radius: 100vh;
+  border: none;
+  background: black;
+  color: white;
+}
+#filebtn:hover {
+  color: black;
+  border-radius: 100vh;
+}
+#setbtn:hover {
+  color: black;
+  border-radius: 100vh;
+}
+#calcbtn:hover {
+  color: black;
+  border-radius: 100vh;
+}
+#idebtn:hover {
+  color: black;
+  border-radius: 100vh;
+}
+#paintbtn:hover {
+  color: black;
+  border-radius: 100vh;
+}
+#startmenu:hover {
+  color: black;
+  border-radius: 100vh;
+}
 .info {
-  position: absolute;
-  top: 1%;
-  left: 1%;
   color: white;
 }
 iframe {
@@ -90,11 +270,14 @@ iframe {
   overflow: auto;
   display: inline-block;
 }
-* { cursor: url(cursor.png), default; }
+* { 
+	cursor: url(cursor.svg), default;
+}
 body {
-	background-image: url("bg.gif");
+	background-image: url("bg3.gif");
 	font-family: 'Poppins', sans-serif;
   background-size: cover;
+  margin: 0;
 }
 #hideide {
 	border-radius: 100px;
@@ -102,6 +285,29 @@ body {
 	border: none;
 	background: #ff6c6c;
 	color: white;
+  position: absolute;
+  top: 1.3%;
+  right: 1%;
+}
+#hidefile {
+  border-radius: 100px;
+  outline: none;
+  border: none;
+  background: #ff6c6c;
+  color: white;
+  position: absolute;
+  top: 1.3%;
+  right: 1%;
+}
+#hideset {
+  border-radius: 100px;
+  outline: none;
+  border: none;
+  background: #ff6c6c;
+  color: white;
+  position: absolute;
+  top: 1.3%;
+  right: 1%;
 }
 #hidebrow {
   border-radius: 100px;
@@ -109,6 +315,9 @@ body {
   border: none;
   background: #ff6c6c;
   color: white;
+  position: absolute;
+  top: 1.3%;
+  right: 1%;
 }
 #hideart {
   border-radius: 100px;
@@ -116,6 +325,9 @@ body {
   border: none;
   background: #ff6c6c;
   color: white;
+  position: absolute;
+  top: 1.3%;
+  right: 1%;
 }
 #hide {
 	border-radius: 100px;
@@ -123,18 +335,26 @@ body {
 	border: none;
 	background: #ff6c6c;
 	color: white;
+  position: absolute;
+  top: 1.3%;
+  right: 1%;
 }
 #taskbar {
-    text-align: center;
+	align-items: center;
     background-color: rgba(255, 255, 255, 0.10);
-    border-radius: 100px;
-    padding: 7px;
-    position: absolute;
     backdrop-filter: blur(5px) saturate(100%);
-    bottom: 2%;
+    margin: 0;
+    display: flex;
+    width: 275px;
+    position: absolute;
+    bottom: 10px;
+    min-height: 50px;
+    text-align: center;
+    justify-content: center;
+    border-radius: 15px;
     left: 50%;
     transform: translateX(-50%);
-    display: flex;
+    z-index: 1000;
 }
 #calculator {
   display: none; 
@@ -166,32 +386,113 @@ body {
 #calcbtn {
   background: url("calc.png");
   color: white;
-  padding: 22px;
   border: none;
-  border-radius: 100px;
+  padding: 5px;
+  border-radius: 10px;
+    width: 40px;
+  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
+  max-height: 40px;
+  max-width: 40px;
+  margin: 3px;
+}
+#startmenu {
+  background: url("start.png");
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 10px
+  width: 40px;
+  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
+  max-height: 40px;
+  max-width: 40px;
+  border-radius: 10px
 }
 #browbtn {
   background: url("browser.png");
   color: white;
-  padding: 22px;
   border: none;
-  border-radius: 100px;
+  padding: 5px;
+  border-radius: 10px;
+    width: 40px;
+  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
+  max-height: 40px;
+  max-width: 40px;
+  margin: 3px;
 }
 #idebtn {
   background: url("ide.png");
   color: white;
-  padding: 22px;
   border: none;
-  border-radius: 100px;
+  padding: 5px;
+  border-radius: 10px;
+    width: 40px;
+  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
+  max-height: 40px;
+  max-width: 40px;
+  margin: 3px;
+}
+#setbtn {
+  background: url("settings.png");
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 10px;
+    width: 40px;
+  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
+  max-height: 40px;
+  max-width: 40px;
+  margin: 3px;
+}
+#filebtn {
+  background: black;
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 10;
+    width: 40px;
+  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
+  max-height: 40px;
+  max-width: 40px;
+  margin: 3px;
 }
 #paintbtn {
   background: url("doggle.png");
   color: white;
-  padding: 22px;
   border: none;
-  border-radius: 100px;
+  padding: 5px;
+  border-radius: 10px;
+    width: 40px;
+  height: 40px;
+  min-width: 40px;
+  min-height: 40px;
+  max-height: 40px;
+  max-width: 40px;
+  margin: 3px;
 }
 #ide {
+  display: none; 
+  position: absolute;
+  z-index: 9;
+  background-color: #242424;
+  text-align: center;
+  border: none;
+  border-radius: 5px;
+  width: 500px;
+  height: 500px;
+}
+#settings {
   display: none; 
   position: absolute;
   z-index: 9;
@@ -212,6 +513,14 @@ body {
   border-radius: 5px;
   width: 500px;
   height: 500px;
+}
+.menu {
+	background: white;
+	position: absolute;
+	width: 200px;
+	height: 100vh;
+	z-index: 2;
+	display: none;
 }
 </style>
 <script>
@@ -358,6 +667,48 @@ function dragElement(elmnt) {
   }
 }
 dragElement(document.getElementById("browser"));
+
+function dragElement(elmnt) {
+  var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
+  if (document.getElementById(elmnt.id + "header")) {
+    /* if present, the header is where you move the DIV from:*/
+    document.getElementById(elmnt.id + "header").onmousedown = dragMouseDown;
+  } else {
+    /* otherwise, move the DIV from anywhere inside the DIV:*/
+    elmnt.onmousedown = dragMouseDown;
+  }
+
+  function dragMouseDown(e) {
+    e = e || window.event;
+    e.preventDefault();
+    // get the mouse cursor position at startup:
+    pos3 = e.clientX;
+    pos4 = e.clientY;
+    document.onmouseup = closeDragElement;
+    // call a function whenever the cursor moves:
+    document.onmousemove = elementDrag;
+  }
+
+  function elementDrag(e) {
+    e = e || window.event;
+    e.preventDefault();
+    // calculate the new cursor position:
+    pos1 = pos3 - e.clientX;
+    pos2 = pos4 - e.clientY;
+    pos3 = e.clientX;
+    pos4 = e.clientY;
+    // set the element's new position:
+    elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
+    elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
+  }
+
+  function closeDragElement() {
+    /* stop moving when mouse button is released:*/
+    document.onmouseup = null;
+    document.onmousemove = null;
+  }
+}
+dragElement(document.getElementById("settings"));
 
 function dragElement(elmnt) {
   var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
