--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@ $(document).ready(function(){
 
       <h1>Wallpapers</h1>
         <button id="btn-1">Green swirl</button>
-        <button id="btn-2">Crystal</button>
         <button id="btn-3">Acid</button>
         <button id="btn-4">Ring</button>
 	<button id="btn-5">Blue mesh</button>
@@ -279,7 +278,7 @@ iframe {
 	cursor: url(cursor.svg), default;
 }
 body {
-	background-image: url("bg3.gif");
+	background-image: url("blue.png");
 	font-family: 'Poppins', sans-serif;
   background-size: cover;
   margin: 0;
