--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@ $(document).ready(function(){
         <button id="btn-3">Acid</button>
         <button id="btn-4">Ring</button>
 	<button id="btn-5">Blue mesh</button>
+	<button id="btn-6">Purple mesh</button>
     </div>
     <script>
 let btn1 = document.querySelector('#btn-1');
@@ -121,9 +122,13 @@ let btn2 = document.querySelector('#btn-2');
 let btn3 = document.querySelector('#btn-3');
 let btn4 = document.querySelector('#btn-4');
 let btn5 = document.querySelector('#btn-5');
+let btn6 = document.querySelector('#btn-6');
 let btnmenu = document.querySelector('.menu');
 btn1.addEventListener('click', () =>{
     document.body.style.backgroundImage = "url('bg.gif')";
+});
+btn6.addEventListener('click', () =>{
+    document.body.style.backgroundImage = "url('purple.png')";
 });
 btn5.addEventListener('click', () =>{
     document.body.style.backgroundImage = "url('blue.png')";
