--- a/index.html
+++ b/index.html
@@ -354,15 +354,13 @@ body {
     backdrop-filter: blur(5px) saturate(100%);
     margin: 0;
     display: flex;
-    width: 275px;
+    width: 100%;
     position: absolute;
-    bottom: 10px;
+    bottom: 0;
     min-height: 50px;
     text-align: center;
     justify-content: center;
     border-radius: 15px;
-    left: 50%;
-    transform: translateX(-50%);
     z-index: 1000;
 }
 #calculator {
