--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@ $(document).ready(function(){
   });
 });
 $(document).ready(function(){
+  $("#hideapp").click(function(){
+    $("#App").hide();
+  });
+  $("#appbtn").click(function(){
+    $("#App").show();
+  });
+});
+$(document).ready(function(){
   $("#hideide").click(function(){
     $("#ide").hide();
   });
@@ -82,10 +90,15 @@ $(document).ready(function(){
 <button id="paintbtn"></button>
 <button id="browbtn"></button>
 <button id="setbtn"></button>
+<button id="appbtn"></button>
 </div>
 <div id="paint">
  <div id="header-1"><img src="browser.png" width="15px" height="15px">Doggle <button id="hideart">X</button></div>
    <iframe src="art.html" width="496" height="460px"></iframe>
+</div>
+<div id="App">
+ <div id="header-1"><img src="browser.png" width="15px" height="15px">App Player <button id="hideapp">X</button></div>
+   <iframe src="appstore.html" width="496" height="460px"></iframe>
 </div>
 <div id="calculator">
  <div id="header-1"><img src="calc.png" width="15px" height="15px">Calculator <button id="hide">X</button></div>
@@ -111,10 +124,14 @@ $(document).ready(function(){
 
       <h1>Wallpapers</h1>
         <button id="btn-1">Green swirl</button>
+        <button id="btn-2">Crystal</button>
         <button id="btn-3">Acid</button>
         <button id="btn-4">Ring</button>
-	<button id="btn-5">Blue mesh</button>
-	<button id="btn-6">Purple mesh</button>
+        <button id="btn-5">Green mesh gradient</button>
+        <button id="btn-6">Blue mesh gradient</button>
+        <button id="btn-7">Red mesh gradient</button>
+        <button id="btn-8">Purple mesh gradient</button>
+        <button id="btn-9">Red mountaint gradient</button>
     </div>
     <script>
 let btn1 = document.querySelector('#btn-1');
@@ -123,15 +140,27 @@ let btn3 = document.querySelector('#btn-3');
 let btn4 = document.querySelector('#btn-4');
 let btn5 = document.querySelector('#btn-5');
 let btn6 = document.querySelector('#btn-6');
+let btn7 = document.querySelector('#btn-7');
+let btn8 = document.querySelector('#btn-8');
+let btn9 = document.querySelector('#btn-9');
 let btnmenu = document.querySelector('.menu');
 btn1.addEventListener('click', () =>{
     document.body.style.backgroundImage = "url('bg.gif')";
 });
-btn6.addEventListener('click', () =>{
+btn8.addEventListener('click', () =>{
     document.body.style.backgroundImage = "url('purple.png')";
 });
-btn5.addEventListener('click', () =>{
+btn9.addEventListener('click', () =>{
+    document.body.style.backgroundImage = "url('bg.png')";
+});
+btn7.addEventListener('click', () =>{
+    document.body.style.backgroundImage = "url('red.png')";
+});
+btn6.addEventListener('click', () =>{
     document.body.style.backgroundImage = "url('blue.png')";
+});
+btn5.addEventListener('click', () =>{
+    document.body.style.backgroundImage = "url('green.png')";
 });
 btn2.addEventListener('click', () =>{
     document.body.style.backgroundImage = "url('bg3.gif')";
@@ -150,7 +179,6 @@ colorInput.addEventListener('input', () =>{
     hexInput.value = color;
     // document.body.style.backgroundColor = color;
 
-    document.querySelector('#startmenu').style.background = color;
     document.querySelector('#hide').style.background = color;
     document.querySelector('#hideset').style.background = color;
     document.querySelector('#hidebrow').style.background = color;
@@ -278,12 +306,13 @@ iframe {
   resize: both;
   overflow: auto;
   display: inline-block;
+  border-radius: 10px;
 }
 * { 
 	cursor: url(cursor.svg), default;
 }
 body {
-	background-image: url("blue.png");
+	background-image: url("bg.png");
 	font-family: 'Poppins', sans-serif;
   background-size: cover;
   margin: 0;
@@ -338,6 +367,16 @@ body {
   top: 1.3%;
   right: 1%;
 }
+#hideapp {
+  border-radius: 100px;
+  outline: none;
+  border: none;
+  background: #ff6c6c;
+  color: white;
+  position: absolute;
+  top: 1.3%;
+  right: 1%;
+}
 #hide {
 	border-radius: 100px;
 	outline: none;
@@ -349,18 +388,23 @@ body {
   right: 1%;
 }
 #taskbar {
-	align-items: center;
-    background-color: rgba(255, 255, 255, 0.10);
+    box-shadow: 0px 0px 5px rgb(0,0,0, 0.20);
+    position: fixed;
+	  align-items: center;
+    background-color: rgba(250, 250, 250, 0.20);
     backdrop-filter: blur(5px) saturate(100%);
     margin: 0;
+    border-radius: 20px;
     display: flex;
-    width: 100%;
     position: absolute;
-    bottom: 0;
-    min-height: 50px;
     text-align: center;
     justify-content: center;
     z-index: 1000;
+    width: 70%;
+    bottom: 20px;
+    height: 45px;
+    left: 50%;
+    transform: translateX(-50%);
 }
 #calculator {
   display: none; 
@@ -375,7 +419,8 @@ body {
   display: none; 
   position: absolute;
   z-index: 9;
-  background-color: #242424;
+  background-color: rgba(250, 250, 250, 0.20);
+  backdrop-filter: blur(5px) saturate(100%);
   text-align: center;
   border: none;
   border-radius: 5px;
@@ -384,7 +429,7 @@ body {
   padding: 5px;
   cursor: move;
   z-index: 10;
-  background-color: #242424;
+  background-color: rgba(250, 250, 250, 0);
   color: white;
   border-radius: 5px 5px 0px 0px;
   text-align: left;
@@ -395,12 +440,12 @@ body {
   border: none;
   padding: 5px;
   border-radius: 10px;
-    width: 40px;
-  height: 40px;
-  min-width: 40px;
-  min-height: 40px;
-  max-height: 40px;
-  max-width: 40px;
+    width: 30px;
+  height: 30px;
+  min-width: 30px;
+  min-height: 30px;
+  max-height: 30px;
+  max-width: 30px;
   margin: 3px;
 }
 #startmenu {
@@ -408,14 +453,17 @@ body {
   color: white;
   border: none;
   padding: 5px;
+  border-radius: 10px;
+  width: 30px;
+  height: 30px;
+  min-width: 30px;
+  min-height: 30px;
+  max-height: 30px;
+  max-width: 30px;
   border-radius: 10px
-  width: 40px;
-  height: 40px;
-  min-width: 40px;
-  min-height: 40px;
-  max-height: 40px;
-  max-width: 40px;
-  border-radius: 10px
+  margin: 3px;
+  position: absolute;
+  left: 10px;
 }
 #browbtn {
   background: url("browser.png");
@@ -423,12 +471,12 @@ body {
   border: none;
   padding: 5px;
   border-radius: 10px;
-    width: 40px;
-  height: 40px;
-  min-width: 40px;
-  min-height: 40px;
-  max-height: 40px;
-  max-width: 40px;
+    width: 30px;
+  height: 30px;
+  min-width: 30px;
+  min-height: 30px;
+  max-height: 30px;
+  max-width: 30px;
   margin: 3px;
 }
 #idebtn {
@@ -437,12 +485,12 @@ body {
   border: none;
   padding: 5px;
   border-radius: 10px;
-    width: 40px;
-  height: 40px;
-  min-width: 40px;
-  min-height: 40px;
-  max-height: 40px;
-  max-width: 40px;
+    width: 30px;
+  height: 30px;
+  min-width: 30px;
+  min-height: 30px;
+  max-height: 30px;
+  max-width: 30px;
   margin: 3px;
 }
 #setbtn {
@@ -451,26 +499,12 @@ body {
   border: none;
   padding: 5px;
   border-radius: 10px;
-    width: 40px;
-  height: 40px;
-  min-width: 40px;
-  min-height: 40px;
-  max-height: 40px;
-  max-width: 40px;
-  margin: 3px;
-}
-#filebtn {
-  background: black;
-  color: white;
-  border: none;
-  padding: 5px;
-  border-radius: 10;
-    width: 40px;
-  height: 40px;
-  min-width: 40px;
-  min-height: 40px;
-  max-height: 40px;
-  max-width: 40px;
+    width: 30px;
+  height: 30px;
+  min-width: 30px;
+  min-height: 30px;
+  max-height: 30px;
+  max-width: 30px;
   margin: 3px;
 }
 #paintbtn {
@@ -479,19 +513,48 @@ body {
   border: none;
   padding: 5px;
   border-radius: 10px;
-    width: 40px;
-  height: 40px;
-  min-width: 40px;
-  min-height: 40px;
-  max-height: 40px;
-  max-width: 40px;
+    width: 30px;
+  height: 30px;
+  min-width: 30px;
+  min-height: 30px;
+  max-height: 30px;
+  max-width: 30px;
+  margin: 3px;
+}
+#appbtn {
+  background: url("app.png");
+  color: white;
+  border: none;
+  padding: 5px;
+  border-radius: 10px;
+    width: 30px;
+  height: 30px;
+  min-width: 30px;
+  min-height: 30px;
+  max-height: 30px;
+  max-width: 30px;
   margin: 3px;
 }
 #ide {
+  box-shadow: 0px 0px 5px rgb(0,0,0, 0.20);
   display: none; 
   position: absolute;
   z-index: 9;
-  background-color: #242424;
+  background-color: rgba(250, 250, 250, 0.20);
+  backdrop-filter: blur(5px) saturate(100%);
+  text-align: center;
+  border: none;
+  border-radius: 5px;
+  width: 500px;
+  height: 500px;
+}
+#App {
+  box-shadow: 0px 0px 5px rgb(0,0,0, 0.20);
+  display: none; 
+  position: absolute;
+  z-index: 9;
+  background-color: rgba(250, 250, 250, 0.20);
+  backdrop-filter: blur(5px) saturate(100%);
   text-align: center;
   border: none;
   border-radius: 5px;
@@ -499,10 +562,12 @@ body {
   height: 500px;
 }
 #settings {
+  box-shadow: 0px 0px 5px rgb(0,0,0, 0.20);
   display: none; 
   position: absolute;
   z-index: 9;
-  background-color: #242424;
+  background-color: rgba(250, 250, 250, 0.20);
+  backdrop-filter: blur(5px) saturate(100%);
   text-align: center;
   border: none;
   border-radius: 5px;
@@ -510,10 +575,12 @@ body {
   height: 500px;
 }
 #paint {
+  box-shadow: 0px 0px 5px rgb(0,0,0, 0.20);
   display: none; 
   position: absolute;
   z-index: 9;
-  background-color: #242424;
+  background-color: rgba(250, 250, 250, 0.20);
+  backdrop-filter: blur(5px) saturate(100%);
   text-align: center;
   border: none;
   border-radius: 5px;
@@ -521,12 +588,15 @@ body {
   height: 500px;
 }
 .menu {
-	background: white;
+  box-shadow: 0px 0px 5px rgb(0,0,0, 0.20);
+  background-color: rgba(250, 250, 250, 0.20);
+  backdrop-filter: blur(5px) saturate(100%);
 	position: absolute;
 	width: 200px;
 	height: 100vh;
 	z-index: 2;
 	display: none;
+  border-radius: 0px 20px 20px 0px;
 }
 </style>
 <script>
@@ -547,6 +617,48 @@ function checkTime(i) {
 }
 //Make the DIV element draggagle:
 dragElement(document.getElementById("calculator"));
+
+function dragElement(elmnt) {
+  var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
+  if (document.getElementById(elmnt.id + "header")) {
+    /* if present, the header is where you move the DIV from:*/
+    document.getElementById(elmnt.id + "header").onmousedown = dragMouseDown;
+  } else {
+    /* otherwise, move the DIV from anywhere inside the DIV:*/
+    elmnt.onmousedown = dragMouseDown;
+  }
+
+  function dragMouseDown(e) {
+    e = e || window.event;
+    e.preventDefault();
+    // get the mouse cursor position at startup:
+    pos3 = e.clientX;
+    pos4 = e.clientY;
+    document.onmouseup = closeDragElement;
+    // call a function whenever the cursor moves:
+    document.onmousemove = elementDrag;
+  }
+
+  function elementDrag(e) {
+    e = e || window.event;
+    e.preventDefault();
+    // calculate the new cursor position:
+    pos1 = pos3 - e.clientX;
+    pos2 = pos4 - e.clientY;
+    pos3 = e.clientX;
+    pos4 = e.clientY;
+    // set the element's new position:
+    elmnt.style.top = (elmnt.offsetTop - pos2) + "px";
+    elmnt.style.left = (elmnt.offsetLeft - pos1) + "px";
+  }
+
+  function closeDragElement() {
+    /* stop moving when mouse button is released:*/
+    document.onmouseup = null;
+    document.onmousemove = null;
+  }
+}
+dragElement(document.getElementById("App"));
 
 function dragElement(elmnt) {
   var pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
