--- a/files.html
+++ b/files.html
@@ -1,5 +1,4 @@
 <body>
-	<h1> Files </h1>
 	<fieldset>
 	<legend>Add files</legend>
 		<input id="inpkey" type="text" placeholder="File name">
@@ -11,9 +10,27 @@
 	</fieldset>
 </body>
 <style type="text/css">
+		input {
+		border: none;
+		background-color: rgba(250, 250, 250, 0.20);
+    	backdrop-filter: blur(5px) saturate(100%);
+		outline: none;
+		padding: 10px;
+		border-radius: 10px;
+		box-shadow: -5px -5px 15px rgba(255,255,255, 0.5), 5px 5px 15px rgba(70,70,70,0.12);
+	}
+	button {
+		background-color: rgba(250, 250, 250, 0.20);
+    	backdrop-filter: blur(5px) saturate(100%);
+		box-shadow: -5px -5px 15px rgba(255,255,255, 0.5), 5px 5px 15px rgba(70,70,70,0.12);
+		border: none;
+		outline: none;
+		padding: 10px;
+		border-radius: 10px;
+	}
 	fieldset {
 		border-radius: 10px;
-		border-color: black;
+		border: none;
 	}
 	body {
 		font-family: 'Poppins', sans-serif;
