--- a/widget.html
+++ b/widget.html
@@ -1,13 +1,12 @@
 <body>
-	<a id="egg" href="https://www.youtube.com/embed/KJO4v1iLXIE"></a>
 	<fieldset>
-	<legend>Add app</legend>
-		<input id="inpkey" type="text" placeholder="App name">
-		<input id="inpvalue" type="text" placeholder="App link">
-		<button type="button" id="btninsert">Import app</button>
+	<legend>Add widget</legend>
+		<input id="inpkey" type="text" placeholder="Widget name">
+		<input id="inpvalue" type="text" placeholder="Widget link">
+		<button type="button" id="btninsert">Import widget</button>
 	</fieldset>
 	<fieldset>
-		<legend>Apps</legend>
+		<legend>widgets</legend>
 		<div id="lsoutput"></div>
 	</fieldset>
 </body>
