Vanadite Ruby -=> Vanadite Bismuth
New vanadite version

--- a/os.html
+++ b/os.html
@@ -19,7 +19,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="veiwport" content="width=device-width, initial-scare=1">
 
-	<title>Vanadite Ruby</title>
+	<title>Vanadite Bismuth</title>
 </head>
 <body onload="startTime()">
 <script src="jquery.min.js"></script>
@@ -161,7 +161,8 @@ $(document).ready(function(){
 <div id="settings">
  <div id="header-1"><img src="settings.png" width="15px" height="15px">Settings <button id="hideset">X</button></div>
     <div>
-      <h1>Theme</h1>
+	    <p> V1.0 </p>
+      <p>Theme</p>
         <input type="text" id="hex">
         <input type="color" id="color">
         <br>
