--- a/os.html
+++ b/os.html
@@ -123,7 +123,7 @@ $(document).ready(function(){
 <button id="filebtn"></button>
 </div>
 <div id="paint">
- <div id="header-1"><img src="browser.png" width="15px" height="15px">Doggle <button id="hideart">X</button></div>
+ <div id="header-1"><img src="doggle.png" width="15px" height="15px">Doggle <button id="hideart">X</button></div>
    <iframe src="art.html" width="496" height="460px"></iframe>
 </div>
 <div id="widget">
@@ -133,7 +133,7 @@ $(document).ready(function(){
 </div>
 <div id="files">
   <button id="backbtn" onclick="window.history.back()">Back</button>
- <div id="header-1"><img src="browser.png" width="15px" height="15px">Files <button id="hidefiles">X</button></div>
+ <div id="header-1"><img src="files.png" width="15px" height="15px">Files <button id="hidefiles">X</button></div>
    <iframe src="files.html" width="496" height="460px"></iframe>
 </div>
 <div id="App">
@@ -161,15 +161,29 @@ $(document).ready(function(){
 <div id="settings">
  <div id="header-1"><img src="settings.png" width="15px" height="15px">Settings <button id="hideset">X</button></div>
     <div>
-	    <p> V1.0 </p>
+	    <p> v1.0 </p>
       <p>Theme</p>
         <input type="text" id="hex">
         <input type="color" id="color">
         <br>
     </div>
     <div>
-
-      <h1>Wallpapers</h1>
+	<fieldset>
+    		<legend>Wallpapers</legend>
+    		<div id="wallpapers1">       
+		<button id="btn-1">Green swirl</button>
+        	<button id="btn-2">Crystal</button>
+        	<button id="btn-3">Acid</button>
+        	<button id="btn-4">Ring</button>
+        	<button id="btn-5">Green mesh gradient</button>
+        	<button id="btn-6">Blue mesh gradient</button>
+        	<button id="btn-7">Red mesh gradient</button>
+        	<button id="btn-8">Purple mesh gradient</button>
+        	<button id="btn-9">Red mountaint gradient</button>
+        	<button id="btn-10">Green mountaint gradient</button>
+		</div>
+  	</fieldset>
+      <p>Wallpapers</p>
         <button id="btn-1">Green swirl</button>
         <button id="btn-2">Crystal</button>
         <button id="btn-3">Acid</button>
@@ -266,6 +280,9 @@ function checkTime(i) {
 </div>
 </body>
 <style type="text/css">
+	feildset {
+	 border:none;
+	}
 #backbtn {
   top: 6px;
   right: 30px;
