--- a/index.html
+++ b/index.html
@@ -1,99 +1,52 @@
-<html>
-  <body>
-  	<p> We recomend using landscape mode on mobile devices for use on this website </p>
+<body onload="startTime()">
 
-    <form id="sign">
-      <input id="usralias" placeholder="Username">
-      <input id="usrpass" type="password" placeholder="Password">
-      <input id="in" type="submit" value="Login" onclick="myFunction()">
-      <input id="up" type="button" value="Sign Up">
-    </form>
-<style type="text/css">
-	p {
-		background: white;
-		color: black;
-		position: sticky;
-		width: 100%;
-		top: 0;
-		border-radius: 10px;
-	}
-	  @veiwport {
-	}
-    zoom: 10;
-    width: extend-to-zoom;
-  }
-  @-ms-veiwport{
-    width: extend-to-zoom;
-    zoom: 3;
-  }
-	#title {
-		position: absolute;
-		top: 21px;
-		font-size: 24px;
-	}
-	#sign {
-		background-color: rgba(250, 250, 250, 0.20);
-		backdrop-filter: blur(5px) saturate(100%);
-		border-radius: 20px;
-		padding: 20px;
-		box-shadow: -5px -5px 15px rgba(255,255,255, 0.5), 5px 5px 15px rgba(70,70,70,0.12);
-	}
-body {
-  background-image: url("bg.png");
-  font-family: 'Poppins', sans-serif;
-  background-size: cover;
-  transition: 1s;
-  margin: 0;
-  text-align: left;
-  position: absolute;
-  left: 50%;
-  bottom: 50%;
-  transform: translateY(-50%);
-  transform: translateX(-50%);
+<div id="txt"></div>
+
+<a href="os.html">Click to enter</a>
+
+<script>
+function startTime() {
+  const today = new Date();
+  let h = today.getHours();
+  let m = today.getMinutes();
+  let s = today.getSeconds();
+  m = checkTime(m);
+  s = checkTime(s);
+  document.getElementById('txt').innerHTML =  h + ":" + m + ":" + s;
+  setTimeout(startTime, 1000);
 }
-	input {
-		font-family: 'Poppins', sans-serif;
-		border: none;
-		background-color: white;
-    	backdrop-filter: blur(5px) saturate(100%);
-		outline: none;
-		padding: 10px;
-		border-radius: 10px;
-		box-shadow: -5px -5px 15px rgba(255,255,255, 0.5), 5px 5px 15px rgba(70,70,70,0.12);
-	}
-	button {
-		background-color: rgba(250, 250, 250, 0.20);
-    	backdrop-filter: blur(5px) saturate(100%);
-		box-shadow: -5px -5px 15px rgba(255,255,255, 0.5), 5px 5px 15px rgba(70,70,70,0.12);
-		border: none;
-		outline: none;
-		padding: 10px;
-		border-radius: 10px;
-	}
-</style>
-    <script src="jquery.js"></script>
-    <script src="gun.js"></script>
-    <script src="sea.js"></script>
-    <script src="login.js"></script>
-    <!-- script src="https://cdn.jsdelivr.net/npm/gun/lib/webrtc.js"></script -->
-    <script>
 
-
-    var gun = Gun(['http://localhost:8765/gun', 'https://gun-manhattan.herokuapp.com/gun']);
-    var user = gun.user();
-
-    $('#up').on('click', function(e){
-      user.create($('#usralias').val(), $('#usrpass').val());
-    });
-
-    $('#sign').on('submit', function(e){
-      e.preventDefault();
-      user.auth($('#usralias').val(), $('#usrpass').val());
-    });
-
-    gun.on('auth', function(){
-      window.location.replace("server.html");
-    });
-    </script>
-  </body>
-</html>
+function checkTime(i) {
+  if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
+  return i;
+}
+</script>
+<h1 id="Welcome"> Welcome User </h1>
+</body>
+<style type="text/css">
+  a {
+    position: absolute;
+    bottom: 10px;
+    font-size: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  #txt {
+    position: absolute;
+    font-size: 20px;
+    bottom: 35px;
+    left: 20px;
+  }
+  body {
+    background-image: url("lock screen.png");
+    font-family: 'Poppins', sans-serif;
+    background-size: cover;
+    transition: 1s;
+    margin: 0;
+    color: white;
+  }
+  #welcome {
+    position: absolute;
+    bottom: 40px;
+    left: 20px;
+  }
