--- a/os.html
+++ b/os.html
@@ -137,7 +137,7 @@ $(document).ready(function(){
 </div>
 <div id="post">
  <div id="header-1"><img src="post.png" width="15px" height="15px">Vanadite Post <button id="hidepost">X</button></div>
-   <iframe src="https://vanaditepost.netlify.app/" width="496" height="460px"></iframe>
+   <iframe src="https://vanaditepost.000webhostapp.com/" width="1096" height="460px"></iframe>
 </div>
 <div id="widget">
   <button id="backbtn" onclick="window.history.back()">Back</button>
@@ -743,7 +743,7 @@ body {
   text-align: center;
   border: none;
   border-radius: 5px;
-  width: 500px;
+  width: 1100px;
   height: 500px;
 }
 #App {
